--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
-Package: passport
+Package: sealer
 Type: Package
 Title: Authenction strategies for plumber
 Version: 0.1.0
 Authors@R: c(person("Dix", "Jan", email = "jan.dix@uni-konstanz.de", role = c("aut", "cre")),
   person("Preu", "Frie", email = "fr1e@pm.me", role = c("aut")))
 Maintainer: Jan Dix <jan.dix@uni-konstanz.de>
-Description: The goal of passport is to provide multiple authentication and authorization strategies for plumber.
+Description: The goal of sealer is to provide multiple authentication and authorization strategies for plumber.
 License: MIT
 Encoding: UTF-8
 LazyData: true
