--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,5 +3,6 @@
 export(jwt)
 importFrom(jose,jwt_decode_hmac)
 importFrom(plumber,forward)
+importFrom(purrr,map2_lgl)
 importFrom(stringr,str_remove)
 importFrom(stringr,str_trim)
