--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,8 @@ Imports:
     stringr,
     purrr
 Suggests:
-    testthat
+    testthat,
+    openssl
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
