update roxygen docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,6 @@ export(jwt)
 importFrom(jose,jwt_decode_hmac)
 importFrom(plumber,forward)
 importFrom(purrr,map2_lgl)
+importFrom(purrr,vec_depth)
 importFrom(stringr,str_remove)
 importFrom(stringr,str_trim)
