--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(check_all_claims)
 export(check_claim)
 export(is_authed_jwt)
 export(is_authed_oauth2_google)
+export(is_authed_return_list)
+export(is_authed_return_list_401)
 importFrom(anytime,anytime)
 importFrom(httr,GET)
 importFrom(httr,content)
