--- a/docs/config.toml
+++ b/docs/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://jandix.github.io/sealr"
+baseURL = "https://jandix.github.io/sealr/docs"
 languageCode = "en-us"
 title = "sealr"
 theme = "hugo-theme-learn"
