#2 try to change favicon

--- a/docs/config.toml
+++ b/docs/config.toml
@@ -37,7 +37,7 @@ home = [ "HTML", "RSS", "JSON"]
   # Order sections in menu by "weight" or "title". Default to "weight"
   ordersectionsby = "weight"
   # Change default color scheme with a variant one. Can be "red", "blue", "green".
-  themeVariant = "sealr"
+  themeVariant = "blue"
 
 [[menu.shortcuts]]
 name = "<i class='fab fa-github'></i> GitHub repo"
