#16 add mockery to package suggests

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,8 @@ Imports:
     purrr
 Suggests:
     testthat,
-    openssl
+    openssl, 
+    mockery
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
