#16 rename files and google functions to OIDC

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ export(authenticate)
 export(check_all_claims)
 export(check_claim)
 export(is_authed_jwt)
-export(is_authed_oauth2_google)
+export(is_authed_oidc_google)
 export(is_authed_return_list)
 export(is_authed_return_list_401)
 importFrom(anytime,anytime)
